# bevy_robotics

./: .gitignore  Cargo.toml  README.md  full.urdf  simple.urdf
bevy_urdf/: Cargo.toml
bevy_urdf/src/: lib.rs
src/: main.rs  robot.rs  world.rs
