[package]
name = "bevy_robotics"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
bevy = { version = "0.14", features = ["dynamic_linking", "wayland"] }

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
