[package]
name = "bevy_robotics"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
bevy = { version = "0.14", features = ["dynamic_linking", "wayland"] }
bevy-fps-counter = "0.5"
urdf-rs = "0.9"
bevy_flycam = "0.14"
bevy_urdf = { path = "./bevy_urdf" }
avian3d = { version = "0.1", default-features = false, features = [
  "3d",
  "f64",
  "default-collider",
  "parry-f64",
  "collider-from-mesh",
  "debug-plugin",
  "parallel",
  "simd",
] }
avian_motors = { git = "https://github.com/RunnersNum40/avian_motors" }
bevy_egui = "0.30"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
