[package]
name = "bevy_urdf"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
bevy = { version = "0.14", features = ["dynamic_linking", "wayland"] }
bevy_stl = { version = "0.14", features = ["wireframe"] }
urdf-rs = "0.9"
avian3d = { version = "0.1", default-features = false, features = [
  "3d",
  "f64",
  "default-collider",
  "parry-f64",
  "collider-from-mesh",
  "debug-plugin",
  "parallel",
  "simd",
] }
uuid = { version = "1.11", features = ["v4"] }
avian_motors = { git = "https://github.com/RunnersNum40/avian_motors" }
